# racha

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  biome.json  package-lock.json  package.json  railpack.json
.agents/skills/deployment/: SKILL.md
.agents/skills/new/: SKILL.md
.agents/skills/projects/: SKILL.md
docs/prd/: streak-tracker.md
migrations/: 20260209000001_initial_schema.sql
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs
src/models/: completion.rs  group.rs  mod.rs  task.rs  user.rs
src/routes/: auth.rs  dashboard.rs  groups.rs  mod.rs  profile.rs  tasks.rs
src/templates/: auth.rs  dashboard.rs  groups.rs  mod.rs  profile.rs  tasks.rs
static/css/: input.css  output.css
static/js/: main.js  utils.js
static/js/features/: date-header.js  task-swipe.js  task-toggle.js  toast.js
templates/: base.html  dashboard.html  profile.html
templates/auth/: login.html  register.html
templates/dashboard/: _progress.html  _progress_oob.html
templates/groups/: _create_form.html  _join_form.html  feed.html
templates/tasks/: _task_card.html  _task_edit.html  _task_form.html
tests/: auth_tests.rs  dashboard_tests.rs  group_tests.rs  task_tests.rs
tests/common/: mod.rs
