[package]
name = "racha"
version = "0.1.0"
rust-version = "1.93.0"
edition = "2024"

[dependencies]
axum = "0.8"
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
argon2 = "0.5"
dotenvy = "0.15"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum-test = "18"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
